force-app/main/default/objects/Adjustment_Log__c/Adjustment_Log__c.object-meta.xml
<CustomObject>
    <label>Adjustment Log</label>
    <nameField>
        <displayFormat>ADJ-{0000}</displayFormat>
        <label>Adjustment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>