force-app/main/default/objects/Adjustment_Log__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scope Change</fullName>
            </value>
            <value>
                <fullName>Budget Change</fullName>
            </value>
            <value>
                <fullName>Timeline Change</fullName>
            </value>
            <value>
                <fullName>Approach Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>