force-app/main/default/objects/Adjustment_Log__c/fields/Review_Decision__c.field-meta.xml
<CustomField>
    <fullName>Review_Decision__c</fullName>
    <label>Review &amp; Decision</label>
    <referenceTo>Review_Decision__c</referenceTo>
    <relationshipLabel>Adjustment Logs</relationshipLabel>
    <relationshipName>Adjustment_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>