force-app/main/default/objects/Adjustment_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Adjustment_Type__c</columns>
    <columns>Adjustment_Reason__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Review_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>